Creacion de los componentes de la aplicacion de Clientes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,139 +1,1 @@
-
-
-<nav class="navbar navbar-expand-lg navbar-dark" aria-label="Eighth  navbar example">
-  <div class="container">
-    <img src="./assets/images/logos/Logo-Outline-White.png" alt="" width="50" height="44" style="display: inline-block;vertical-align: text-bottom;">
-    <a class="navbar-brand" href="#"><b>504 Delivery</b></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"  data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false"  aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarsExample07">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" href="#"><b>Iniciar Sesión</b></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"><b>Registrate</b></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<section class="text-center" id="header">
-    <img src="../assets/images/logos/504 deliver.jpg"  alt="Delivery 100% Catracho">
-</section>
-<main>
-  <div class="container">
-    <div class="row my-4">
-      <div class="col-lg-4 col-10 col-md-4 offset-1 offset-lg-0 offset-md-0 mt-2 d-flex align-items-stretch">
-        <div class="card">
-          <img src="./assets/images/logos/buy.svg" class="card-img-top img-cards" alt="compra online">
-          <div class="card-body">
-            <h2 class="card-title text-center">COMPRA ONLINE</h2>
-            <p class="card-text">Pide tu platillo de tu restaurante favorito desde la comodidad de tu casa.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-10 col-md-4 offset-1 offset-lg-0 offset-md-0 mt-2 d-flex align-items-stretch ">
-        <div class="card">
-          <img src="./assets/images/logos/recive.svg" class="card-img-top img-cards" alt="Envio Express">
-          <div class="card-body">
-            <h2 class="card-title text-center">ENVIO EXPRESS</h2>
-            <p class="card-text">Uno de nuestros motoristas ira a traer tu pedido al restaurante e ira a dejarlo a la puerta de tu casa</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-10 col-md-4 offset-1 offset-lg-0 offset-md-0 mt-2 d-flex align-items-stretch">
-        <div class="card">
-          <img src="./assets/images/logos/send.svg" class="card-img-top img-cards" alt="Entrega Confiable">
-          <div class="card-body">
-            <h2 class="card-title text-center">ENTREGA CONFIABLE</h2>
-            <p class="card-text">Al llegar el motorista, podras pagar tu pedido con efectivo o tarjeta de credito, y el te entregara tu comida con todas las medidas de bioseguridad.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</main>
-<section>
-</section>
-<section class="mb-3">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12 text-center">
-        <h1>¿Tienes alguna duda?</h1>
-        <h4>Puedes contactarnos a los siguientes números</h4>
-      </div>
-      <div class="col-12 offset-lg-3 offset-md-2 col-md-4 col-lg-3 my-2">
-        <div class="card text-center" >
-          <div class="card-body">
-            <h5 class="card-title">Rafael Bautista</h5>
-            <p class="card-text">Atención al Cliente</p>
-            <button id="btn-atencion-cliente-1" class="btn btn-outline-success">Contactar <i class="fab fa-whatsapp"></i></button>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-lg-3 col-md-4 my-2">
-        <div class="card text-center" >
-          <div class="card-body">
-            <h5 class="card-title">Yuvini Flores</h5>
-            <p class="card-text">Atención al Cliente</p>
-            <button id="btn-atencion-cliente-2" class="btn btn-outline-success">Contactar <i class="fab fa-whatsapp"></i></button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="trabajo-section my-3">
-  <div class="row" id="trabajo">
-    <div class="col-12 my-0 my-sm-3 my-lg-3 my-md-3 text-center text-white">
-      <h4 class="">¿Deseas unirte a nuestro equipo de repartidores?</h4>
-      <a href="../Frontend Motoristas/index.html" class="btn btn-primary">Registrate ahora</a>
-    </div>
-  </div>
-</section>
-<section class="container-fluid text-center my-3">
-  <h3 class="my-4">Empresas que forman parte de nuestro servicio de Delivery</h3>
-  <div class="row">
-    <div class="col-3 col-lg-1 col-md-2">
-      <img src="./assets/images/restaurantes/Logo-Burger-King.png" class="img-fluid" alt="">
-    </div>
-    <div class="col-3 col-lg-1 col-md-2">
-      <img src="../assets/images/restaurantes/Dunkin-Donuts-Logo-PNG.png" class="img-fluid" alt="">
-    </div>
-    <div class="col-3 col-lg-1 col-md-2">
-      <img src="../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
-    </div>
-    <div class="col-3 col-lg-1 col-md-2">
-      <img src="../assets/images/restaurantes/Pizza_Hut_logo.png" class="img-fluid" alt="">
-    </div>
-    <div class="col-3 col-lg-1 col-md-2">
-      <img src="../assets/images/restaurantes/Wendys-logo.png" class="img-fluid" alt="">
-    </div>
-    <div class="col-3 col-lg-1 col-md-2">
-      <img src="../assets/images/restaurantes/Popeyes-logo_2008.png" class="img-fluid" alt="">
-    </div>
-    <div class="col-3 col-lg-1 col-md-2">
-      <img src="../assets/images/restaurantes/logo-lc.png" class="img-fluid" alt="">
-    </div>
-    <div class="col-3 col-lg-1 col-md-2">
-      <img src="./assets/images/restaurantes/little-caesars-vector-logo.png" class="img-fluid" alt="">
-    </div>
-  </div>
-</section>
-<footer>
-  <div class="row text-white m-0">
-    <div class="col-7 col-lg-6 text-lg-center m-lg-0">
-      <ul class="m-0 my-3 mt-lg-3 p-0">
-        <li><i class="fab fa-facebook"></i> 504 Delivery</li>
-        <li><i class="fab fa-instagram"></i> 504_Delivery_HN</li>
-        <li><i class="fab fa-twitter"></i> 504_Delivery_HN</li>
-      </ul>
-    </div>
-    <div class="col-5 col-lg-6 text-center">
-      <img src="./assets/images/logos/Logo-Outline-White.png" width="50" height="44" class="mt-3">
-      <h6>504 Delivery &copy; 2021</h6>
-    </div>
-  </div>
-</footer>
+<router-outlet></router-outlet>
