HTML de los componentes Login,Landing y Signup

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -10,10 +10,10 @@
       <div class="collapse navbar-collapse" id="dropdownLanding">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" href="#"><b>Iniciar Sesión</b></a>
+            <a class="nav-link active" ><b>Iniciar Sesión</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"><b>Registrate</b></a>
+            <a class="nav-link active" routerLink='/signup' tabindex="-1" aria-disabled="true"><b>Registrate</b></a>
           </li>
         </ul>
       </div>
