--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,1 +1,46 @@
-<p>signup works!</p>
+<main style="height: 1000px;">
+    <div class="row pt-5 pb-5">
+        <div class="offset-1 col-10 mt-3">
+            <div class="card">
+                <div class="card">
+                    <div class="row my-3 mb-3">
+                        <div class="offset-2 col-8">
+                            <img src="../../../assets/images/logos/Logo-Oficial.png" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                    <form class="my-3">
+                        <label class="my-1">Nombre:</label>
+                        <input type="text" class="form-control" placeholder="Nombre">
+                        <label class="my-1">Apellido:</label>
+                        <input type="text" class="form-control" placeholder="Apellido">
+                        <label class="my-1">Correo Electronico:</label>
+                        <input type="email" class="form-control" placeholder="Correo">
+                        <label class="my-1">Contraseña:</label>
+                        <input type="password" class="form-control" placeholder="Contraseña">
+                        <label class="my-1">Repetir Contraseña:</label>
+                        <input type="password" class="form-control" placeholder="Volver a introducir contraseña">
+                        <label class="my-1">Genero:</label>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                            <label class="form-check-label" for="flexRadioDefault1">
+                              Masculino
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                            <label class="form-check-label" for="flexRadioDefault2">
+                              Femenino
+                            </label>
+                        </div>
+                        <label class="my-1">Fecha de Nacimiento:</label>
+                        <input type="date" class="form-control">
+                        <label class="my-1">Teléfono:</label>
+                        <input type="text" class="form-control" placeholder="XXXX-XXXX">
+                    </form>
+                    <span style="margin: 0 auto; font-size: 0.8rem;">¿Ya tiene una cuenta? <a routerLink='/login'>Inicia Sesión Ahora!</a></span>
+                    <button class="btn btn-primary my-4" style="width: 80%; margin: 0 auto;">Registrarse</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
