Footbar Component y Navbar Component anidados a los componentes de la aplicacion principal

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,11 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-dark" id="navbar-app"> 
+<!-- <nav class="navbar navbar-expand-lg navbar-dark" id="navbar-app"> 
     <div class="text-center" style="margin: 0 auto;">
         <img src="../../../assets/images/logos/Logo-Outline-White.png" style="width: 13%;" alt="">
         <a class="navbar-brand" href="#"><b>504 Delivery</b></a>
     </div>
-</nav>
+</nav> -->
+<app-navbar></app-navbar>
 
-<main class="container my-3">
+<main class="container mt-3 mb-5">
     <div class="row">
         <div class="col-6 my-2">
             <div class="card">
@@ -43,14 +44,52 @@
                 </div>
               </div>
         </div>
+        <div class="col-6 my-2">
+            <div class="card">
+                <img src="../../../assets/images/restaurantes/Dunkin-Donuts-Logo-PNG.png" class="card-img-top mt-3" alt="...">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Dunkin Donuts</h5>
+                  <a href="#" class="btn btn-primary">Ver Menú</a>
+                </div>
+              </div>
+        </div>
+        <div class="col-6 my-2">
+            <div class="card">
+                <img src="../../../assets/images/restaurantes/Popeyes-logo_2008.png" class="card-img-top mt-3" alt="...">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Popeyes</h5>
+                  <a href="#" class="btn btn-primary">Ver Menú</a>
+                </div>
+              </div>
+        </div>
+        <div class="col-6 my-2">
+            <div class="card">
+                <img src="../../../assets/images/restaurantes/Wendys-logo.png" class="card-img-top mt-3" alt="...">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Wendy's</h5>
+                  <a href="#" class="btn btn-primary">Ver Menú</a>
+                </div>
+              </div>
+        </div>
+        <div class="col-6 my-2">
+            <div class="card">
+                <img src="../../../assets/images/restaurantes/logo-lc.png" class="card-img-top mt-3" alt="...">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Church's Chicken</h5>
+                  <a href="#" class="btn btn-primary">Ver Menú</a>
+                </div>
+              </div>
+        </div>
     </div>
 </main>
 
-<footer class="fixed-bottom">
+<app-footbar></app-footbar>
+
+<!-- <footer class="fixed-bottom">
     <div class="row text-center" id="footbar">
-        <div class="col-3" style="padding-right: 0px;"><a routerLink='home'><fa-icon [icon]="faHome"></fa-icon></a></div>
-        <div class="col-3"><a routerLink='carrito'><fa-icon [icon]="faShoppingBag"></fa-icon></a></div>
-        <div class="col-3"><a routerLink='pedidos'><fa-icon [icon]="faShoppingCart"></fa-icon></a></div>
-        <div class="col-3" style="padding-left: 0px;"><a routerLink='perfil'><fa-icon [icon]="faUser"></fa-icon></a></div>
+        <div class="col-3" style="padding-right: 0px;"><a routerLink='/home'><fa-icon [icon]="faHome"></fa-icon></a></div>
+        <div class="col-3"><a routerLink='/carrito'><fa-icon [icon]="faShoppingBag"></fa-icon></a></div>
+        <div class="col-3"><a routerLink='/pedidos'><fa-icon [icon]="faShoppingCart"></fa-icon></a></div>
+        <div class="col-3" style="padding-left: 0px;"><a routerLink='/perfil'><fa-icon [icon]="faUser"></fa-icon></a></div>
     </div>
-</footer>
+</footer> -->
