--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,6 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark" id="navbar-app"> 
+    <div class="text-center" style="margin: 0 auto;">
+        <img src="../../../assets/images/logos/Logo-Outline-White.png" style="width: 13%;" alt="">
+        <a class="navbar-brand" href="#"><b>504 Delivery</b></a>
+    </div>
+</nav>
