--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,22 +1,20 @@
 <main style="height: 655px;">
-    <div class="row pt-5 mb-0">
-        <div class="offset-1 col-10 my-5">
+    <div class="container pt-5 mb-0">
+        <div class="card mt-5">
             <div class="card">
-                <div class="card">
-                    <div class="row my-4 mb-3">
-                        <div class="offset-2 col-8">
-                            <img src="../../../assets/images/logos/Logo-Oficial.png" class="img-fluid" alt="">
-                        </div>
+                <div class="text-center mt-3">
+                    <div class="">
+                        <img src="../../../assets/images/logos/Logo-Oficial.png" width="200px" class="img-fluid" alt="">
                     </div>
-                    <form class="my-3">
-                        <label class="my-2" style="margin-left: 10%;">Correo Electrónico:</label>
-                        <input type="text" class="form-control" style="width: 80%; margin: 0 auto;">
-                        <label class="my-2" style="margin-left: 10%;">Contraseña:</label>
-                        <input type="password" class="form-control" style="width: 80%; margin: 0 auto;">
-                    </form>
-                    <span style="margin: 0 auto; font-size: 0.8rem;">¿Aun no tienes una cuenta? <a routerLink='/signup'>Registrate!</a></span>
-                    <button class="btn btn-primary my-4" style="width: 80%; margin: 0 auto;">Iniciar Sesión</button>
                 </div>
+                <form class="my-3">
+                    <label class="my-2" style="margin-left: 10%;">Correo Electrónico:</label>
+                    <input type="text" class="form-control" style="width: 80%; margin: 0 auto;">
+                    <label class="my-2" style="margin-left: 10%;">Contraseña:</label>
+                    <input type="password" class="form-control" style="width: 80%; margin: 0 auto;">
+                </form>
+                <span style="margin: 0 auto; font-size: 0.8rem;">¿Aun no tienes una cuenta? <a routerLink='/signup'>Registrate!</a></span>
+                <button class="btn btn-primary my-4" style="width: 80%; margin: 0 auto;">Iniciar Sesión</button>
             </div>
         </div>
     </div>
