--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,11 +1,10 @@
 <main style="height: 1000px;">
-    <div class="row pt-5 pb-5">
-        <div class="offset-1 col-10 mt-3">
-            <div class="card">
+    <div class="container pt-5 pb-5">
+            <div class="card mt-3">
                 <div class="card">
-                    <div class="row my-3 mb-3">
-                        <div class="offset-2 col-8">
-                            <img src="../../../assets/images/logos/Logo-Oficial.png" class="img-fluid" alt="">
+                    <div class="text-center">
+                        <div class="mt-3">
+                            <img src="../../../assets/images/logos/Logo-Oficial.png" width="200px" class="img-fluid" alt="">
                         </div>
                     </div>
                     <form class="my-3">
@@ -41,6 +40,5 @@
                     <button class="btn btn-primary my-4" style="width: 80%; margin: 0 auto;">Registrarse</button>
                 </div>
             </div>
-        </div>
     </div>
 </main>
