Base de la pagina del menu del restaurante, modificacion del navbar(Solo aparece en las subpaginas, permitiendo regresar a la pagina anterior a traves de una flecha))

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<main style="height: 655px;">
+<main style="min-height: 100vh;">
     <div class="container pt-5 mb-0">
         <div class="card mt-5">
             <div class="card">
