--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,7 +4,7 @@
         <a class="navbar-brand" href="#"><b>504 Delivery</b></a>
     </div>
 </nav> -->
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 
 <main class="container mt-3 mb-5">
     <div class="row">
@@ -13,9 +13,9 @@
                 <img src="../../../assets/images/restaurantes/KFC-logo.png" class="card-img-top mt-3" alt="...">
                 <div class="card-body text-center">
                   <h5 class="card-title">KFC</h5>
-                  <a href="#" class="btn btn-primary">Ver Menú</a>
+                  <a routerLink='id' class="btn btn-primary">Ver Menú</a>
                 </div>
-              </div>
+            </div>
         </div>
         <div class="col-6 my-2">
             <div class="card">
