--- a/src/app/components/menu-restaurante/menu-restaurante.component.html
+++ b/src/app/components/menu-restaurante/menu-restaurante.component.html
@@ -1,1 +1,19 @@
-<p>menu-restaurante works!</p>
+<app-navbar></app-navbar>
+
+<main class="container mt-3">
+    <div class="card">
+        <div class="row no-gutters">
+            <div class="col-5">
+                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid my-2" alt="">
+            </div>
+            <div class="col-7">
+                <h5 class="mt-2">Combo Coronel Burger</h5>
+                <p class="mb-0">Hamburguesa Coronel Burger, acompañada con Papás Fritas y Pepsi de 900 ml.</p>
+                <div class="text-right">
+                    <a routerLink="infoproducto/id" id="añadir-producto" class="mr-3"><fa-icon [icon]="faPlusCircle"></fa-icon> Añadir</a>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+</main>
