--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-dark" id="navbar-app"> 
-    <div class="text-center" style="margin: 0 auto;">
-        <img src="../../../assets/images/logos/Logo-Outline-White.png" style="width: 13%;" alt="">
-        <a class="navbar-brand" href="#"><b>504 Delivery</b></a>
-    </div>
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark" id="navbar-app"> 
+    <button class="btn btn-link" (click)="goBack()"><fa-icon [icon]="faArrowLeft"></fa-icon></button>
 </nav>
