--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,4 +1,4 @@
-<main style="height: 1000px;">
+<main style="min-height: 100vh;">
     <div class="container pt-5 pb-5">
             <div class="card mt-3">
                 <div class="card">
