Avance en la pagina de información de producto

--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -1,2 +1,38 @@
-<app-navbar></app-navbar>
 <app-footbar></app-footbar>
+
+<main class="container my-3">
+    <div class="card my-2">
+        <div class="row no-gutters">
+            <div class="col-5">
+                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid my-2" alt="">
+            </div>
+            <div class="col-7">
+                <h5 class="mt-2">Combo Coronel Burger</h5>
+                <p class="mb-0">Hamburguesa Coronel Burger, acompañada con Papás Fritas y Pepsi de 900 ml.</p>
+                <div class="text-right mt-3">
+                    <span class="mr-3">Precio: L. 130.00</span>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+    <div class="card my-2">
+        <div class="row no-gutters">
+            <div class="col-5">
+                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid my-2" alt="">
+            </div>
+            <div class="col-7">
+                <h5 class="mt-2">Combo Coronel Burger</h5>
+                <p class="mb-0">Hamburguesa Coronel Burger, acompañada con Papás Fritas y Pepsi de 900 ml.</p>
+                <div class="text-right mt-3">
+                    <span class="mr-3">Precio: L. 130.00</span>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
+        
+
+</main>
