--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
                     <input type="password" class="form-control" style="width: 80%; margin: 0 auto;">
                 </form>
                 <span style="margin: 0 auto; font-size: 0.8rem;">¿Aun no tienes una cuenta? <a routerLink='/signup'>Registrate!</a></span>
-                <button class="btn btn-primary my-4" style="width: 80%; margin: 0 auto;">Iniciar Sesión</button>
+                <button class="btn btn-primary my-4" (click)="iniciarSesion()" style="width: 80%; margin: 0 auto;">Iniciar Sesión</button>
             </div>
         </div>
     </div>
