Avance del componente Carrito y base del componente para generar la direccion de entrega

--- a/src/app/components/footbar/footbar.component.html
+++ b/src/app/components/footbar/footbar.component.html
@@ -1,8 +1,8 @@
 <footer class="fixed-bottom">
     <div class="row text-center" id="footbar">
         <div class="col-3" style="padding-right: 0px;"><a routerLink='/home'><fa-icon [icon]="faHome"></fa-icon></a></div>
-        <div class="col-3"><a routerLink='/carrito'><fa-icon [icon]="faShoppingBag"></fa-icon></a></div>
-        <div class="col-3"><a routerLink='/pedidos'><fa-icon [icon]="faShoppingCart"></fa-icon></a></div>
+        <div class="col-3"><a routerLink='/carrito'><fa-icon [icon]="faShoppingCart"></fa-icon></a></div>
+        <div class="col-3"><a routerLink='/pedidos'><fa-icon [icon]="faShoppingBag"></fa-icon></a></div>
         <div class="col-3" style="padding-left: 0px;"><a routerLink='/perfil'><fa-icon [icon]="faUser"></fa-icon></a></div>
     </div>
 </footer>
