--- a/src/app/components/menu-restaurante/menu-restaurante.component.html
+++ b/src/app/components/menu-restaurante/menu-restaurante.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 
 <main class="container mt-3">
-    <div class="card">
+    <div class="card my-2">
         <div class="row no-gutters">
             <div class="col-5">
                 <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid my-2" alt="">
@@ -16,4 +16,5 @@
             </div>
         </div>
     </div>
+    
 </main>
