--- a/src/app/components/pedidos/pedidos.component.html
+++ b/src/app/components/pedidos/pedidos.component.html
@@ -1,2 +1,42 @@
-<app-navbar></app-navbar>
+<main class="container">
+    <div class="card my-2">
+        <div class="row no-gutters my-2">
+            <div class="col-5 align-self-center">
+                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
+            </div>
+            <div class="col-7">
+                <h5 class="mt-2">Combo Coronel Burger</h5>
+                <h6>Pago: L. 150.00</h6>
+                <h6>Estado: Entregado</h6>
+                <a routerLink="">Mas información</a>
+            </div>
+        </div>
+    </div>
+    <div class="card my-2">
+        <div class="row no-gutters my-2">
+            <div class="col-5 align-self-center">
+                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
+            </div>
+            <div class="col-7">
+                <h5 class="mt-2">Combo Coronel Burger</h5>
+                <h6>Pago: L. 150.00</h6>
+                <h6>Estado: Cancelado</h6>
+            </div>
+        </div>
+    </div>
+    <div class="card my-2">
+        <div class="row no-gutters my-2">
+            <div class="col-5 align-self-center">
+                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
+            </div>
+            <div class="col-7">
+                <h5 class="mt-2">Combo Coronel Burger</h5>
+                <h6>Pago: L. 150.00</h6>
+                <h6>Estado: Entregado</h6>
+            </div>
+        </div>
+    </div>
+</main>
+
+
 <app-footbar></app-footbar>
