--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -3,8 +3,8 @@
 <main class="container my-3">
     <div class="card my-2">
         <div class="row no-gutters">
-            <div class="col-5">
-                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid my-2" alt="">
+            <div class="col-5 align-self-center">
+                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
             </div>
             <div class="col-7">
                 <h5 class="mt-2">Combo Coronel Burger</h5>
@@ -19,8 +19,8 @@
 
     <div class="card my-2">
         <div class="row no-gutters">
-            <div class="col-5">
-                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid my-2" alt="">
+            <div class="col-5 align-self-center">
+                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
             </div>
             <div class="col-7">
                 <h5 class="mt-2">Combo Coronel Burger</h5>
@@ -31,6 +31,10 @@
                 
             </div>
         </div>
+    </div>
+
+    <div class="container text-center my-3">
+        <a routerLink="id/direccion-entrega" class="btn btn-primary" style="width: 70%;">Proceder a Pagar</a>
     </div>
 
         
