--- a/src/app/components/menu-restaurante/menu-restaurante.component.html
+++ b/src/app/components/menu-restaurante/menu-restaurante.component.html
@@ -3,12 +3,13 @@
 <main class="container mt-3">
     <div class="card my-2">
         <div class="row no-gutters">
-            <div class="col-5">
-                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid my-2" alt="">
+            <div class="col-5 align-self-center">
+                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
             </div>
             <div class="col-7">
                 <h5 class="mt-2">Combo Coronel Burger</h5>
                 <p class="mb-0">Hamburguesa Coronel Burger, acompañada con Papás Fritas y Pepsi de 900 ml.</p>
+                <h6 class="mt-3">Precio: L. 150.00</h6>
                 <div class="text-right">
                     <a routerLink="infoproducto/id" id="añadir-producto" class="mr-3"><fa-icon [icon]="faPlusCircle"></fa-icon> Añadir</a>
                 </div>
