Geolocalizacion creada para recibir la ubicacion actual del cliente y mostrarla en el mapa

--- a/src/app/components/direccion-entrega/direccion-entrega.component.html
+++ b/src/app/components/direccion-entrega/direccion-entrega.component.html
@@ -1,3 +1,12 @@
 <app-navbar></app-navbar>
 
-<main class="container"></main>
+<main class="container my-3">
+    <div id="map" class="my-3" style="height: 350px;"></div>
+
+    <div class="text-center"></div>
+    <span>¿Es esta su dirección actual?</span>
+    <button class="btn btn-primary">
+        Si
+    </button>
+
+</main>
