Pagina para proceder a realizar pedido terminada

--- a/src/app/components/direccion-entrega/direccion-entrega.component.html
+++ b/src/app/components/direccion-entrega/direccion-entrega.component.html
@@ -3,10 +3,14 @@
 <main class="container my-3">
     <div id="map" class="my-3" style="height: 350px;"></div>
 
-    <div class="text-center"></div>
-    <span>¿Es esta su dirección actual?</span>
-    <button class="btn btn-primary">
-        Si
-    </button>
+    <div class="text-center">
+        <span class="text-sm">La entrega se realizara en la siguiente dirección basandonos en su ubicación</span>
+    </div>
+    
+    <app-metodo-pago></app-metodo-pago>
 
+    <div class="text-center">
+        <button class="btn btn-primary">Realizar Pedido</button>
+    </div>
+    
 </main>
