--- a/src/app/components/metodo-pago/metodo-pago.component.html
+++ b/src/app/components/metodo-pago/metodo-pago.component.html
@@ -1,1 +1,18 @@
-<p>metodo-pago works!</p>
+<main class="container my-3">
+    <select class="form-control">
+        <option>Seleccione su método de Pago</option>
+        <option value="tarjeta">Tarjeta contra entrega</option>
+        <option value="efectivo">Efectivo</option>
+    </select>
+
+    <div class="card my-2">
+        <div class="card-body">
+            <p>Cuál es el monto con el que pagará:</p>
+            <div class="input-group" style="width: 60%;">
+                <div class="input-group-text">L.</div>
+                <input type="number" class="form-control" placeholder="Monto" min="100">
+                <div class="input-group-text">.00</div>
+              </div>
+        </div>
+    </div>
+</main>
