Funcionalidad al elegir metodo de pago

--- a/src/app/components/metodo-pago/metodo-pago.component.html
+++ b/src/app/components/metodo-pago/metodo-pago.component.html
@@ -1,11 +1,11 @@
 <main class="container my-3">
-    <select class="form-control">
+    <select class="form-control" [(ngModel)]="opcionSeleccionada" (Change)="metodoPagoSeleccionado()">
         <option>Seleccione su método de Pago</option>
         <option value="tarjeta">Tarjeta contra entrega</option>
         <option value="efectivo">Efectivo</option>
     </select>
 
-    <div class="card my-2">
+    <div class="card my-2" [hidden]="opcionSeleccionada != 'efectivo'">
         <div class="card-body">
             <p>Cuál es el monto con el que pagará:</p>
             <div class="input-group" style="width: 60%;">
