--- a/src/app/components/pedidos/pedidos.component.html
+++ b/src/app/components/pedidos/pedidos.component.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col-7">
                 <h5 class="mt-2">Combo Coronel Burger</h5>
-                <h6>Pago: L. 150.00</h6>
+                <h6>Monto: L. 150.00</h6>
                 <h6>Estado: Entregado</h6>
                 <a routerLink="">Mas información</a>
             </div>
@@ -19,8 +19,9 @@
             </div>
             <div class="col-7">
                 <h5 class="mt-2">Combo Coronel Burger</h5>
-                <h6>Pago: L. 150.00</h6>
+                <h6>Monto: L. 150.00</h6>
                 <h6>Estado: Cancelado</h6>
+                <a routerLink="">Mas información</a>
             </div>
         </div>
     </div>
@@ -31,8 +32,9 @@
             </div>
             <div class="col-7">
                 <h5 class="mt-2">Combo Coronel Burger</h5>
-                <h6>Pago: L. 150.00</h6>
+                <h6>Monto: L. 150.00</h6>
                 <h6>Estado: Entregado</h6>
+                <a routerLink="">Mas información</a>
             </div>
         </div>
     </div>
