Cambiar ruta al dar click al boton Proceder a Pagar

--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="container text-center my-3">
-        <a routerLink="id/direccion-entrega" class="btn btn-primary" style="width: 70%;">Proceder a Pagar</a>
+        <a routerLink="realizar-pedido" class="btn btn-primary" style="width: 70%;">Proceder a Pagar</a>
     </div>
 
         
