--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,19 +1,23 @@
 <main class="container my-3 py-2">
-    <div class="card">
-        <div class="text-center mt-5">
+    <div class="card mt-1">
+        <div class="text-center mt-4">
             <img src="../../../assets/images/logos/user-profile.png" class="img-fluid" style="width: 50%; height: auto;">
             <h4 class="my-3">Nombre del Usuario</h4>
         </div>
-        <div class="card-body" style="margin-top: 70px;">
-          <div class="profile-list-item">
-              <h5>Mi Perfil</h5>
-          </div>
-          <div class="profile-list-item">
-            <h5>Atención al Cliente</h5>
-          </div>
-          <div class="profile-list-item">
-            <h5>Información de la Aplicacion</h5>
-          </div>
+        <div class="card-body" style="margin-top: 40px;">
+            <div class="profile-list-item">
+                <h5>Teléfono: </h5>
+            </div>
+            <div class="profile-list-item">
+              <h5>Correo: </h5>
+            </div>
+            <div class="profile-list-item">
+                <h5>Cliente Bronce</h5>
+                <h6>30 Pedidos Realizados</h6>
+            </div>
+            <div class="atencion-cliente text-center">
+              <h5>Atencion al Cliente</h5>
+            </div>
         </div>
     </div>
 </main>
