--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -15,8 +15,8 @@
                 <h5>Cliente Bronce</h5>
                 <h6>30 Pedidos Realizados</h6>
             </div>
-            <div class="atencion-cliente text-center">
-              <h5>Atencion al Cliente</h5>
+            <div class="text-center mt-3">
+              <button class="btn btn-primary btn-lg" (click)="authService.logOut()">Cerrar Sesion</button>
             </div>
         </div>
     </div>
