Pagina de Registro 100% funcional

--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -16,7 +16,7 @@
                 <h6>30 Pedidos Realizados</h6>
             </div>
             <div class="text-center mt-3">
-              <button class="btn btn-primary btn-lg" (click)="authService.logOut()">Cerrar Sesion</button>
+              <button class="btn btn-primary btn-lg" (click)="clientesService.logOut()">Cerrar Sesion</button>
             </div>
         </div>
     </div>
