--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -13,7 +13,7 @@
                         <label class="my-1">Apellido:</label>
                         <input type="text" formControlName="apellido" class="form-control" placeholder="Apellido" required>
                         <label class="my-1">Correo Electronico:</label>
-                        <input type="email" formControlName="correoElectronico" class="form-control" placeholder="Correo" required>
+                        <input type="email" formControlName="correo" class="form-control" placeholder="Correo" required>
                         <label class="my-1">Contraseña:</label>
                         <input type="password" formControlName="password" class="form-control" placeholder="Contraseña" required>
                         <label clas><small>La contraseña debe ser de minimo 8 caracteres</small></label> <br>
@@ -21,21 +21,21 @@
                         <input type="password" class="form-control" placeholder="Volver a introducir contraseña"> -->
                         <label class="my-1" >Genero:</label>
                         <div class="form-check">
-                            <input class="form-check-input" formControlName="genero" value="1" type="radio" name="genero" id="genero">
-                            <label class="form-check-label" for="flexRadioDefault1">
+                            <input class="form-check-input" formControlName="genero" value="Masculino" type="radio" name="genero" id="genero">
+                            <label class="form-check-label" for="genero">
                               Masculino
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" formControlName="genero" value="2" type="radio" name="genero" id="genero">
-                            <label class="form-check-label" for="flexRadioDefault2">
+                            <input class="form-check-input" formControlName="genero" value="Femenino" type="radio" name="genero" id="genero">
+                            <label class="form-check-label" for="genero">
                               Femenino
                             </label>
                         </div>
                         <label class="my-1">Fecha de Nacimiento:</label>
                         <input type="date" class="form-control" formControlName="fechaNacimiento" required>
                         <label class="my-1">Teléfono:</label>
-                        <input type="text" class="form-control" formControlName="telefono" placeholder="XXXX-XXXX" required>
+                        <input type="text" class="form-control" formControlName="telefono" placeholder="XXXX-XXXX" pattern="[0-9]{4}-[0-9]{4}" required>
                     </form>
                     <span style="margin: 0 auto; font-size: 0.8rem;">¿Ya tiene una cuenta? <a routerLink='/login'>Inicia Sesión Ahora!</a></span>
                     <button class="btn btn-primary my-4" (click)="guardarNuevoCliente()" style="width: 80%; margin: 0 auto;">Registrarse</button>
