El frontend ya trae los restaurantes, el menu de los restaurantes, y la opcion de ver la informacion de cada producto

--- a/src/app/components/informacion-producto/informacion-producto.component.html
+++ b/src/app/components/informacion-producto/informacion-producto.component.html
@@ -2,15 +2,15 @@
 
 <main class="container my-3">
     <div class="card">
-        <div class="row no-gutters">
-            <div class="col-5">
-                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid my-2" alt="">
-            </div>
-            <div class="col-7">
-                <h5 class="mt-2">Combo Coronel Burger</h5>
-                <p class="mb-0">Hamburguesa Coronel Burger, acompañada con Papás Fritas y Pepsi de 900 ml.</p>
+        <div class="text-center">
+            <img src="../../../assets/images/{{imagenProducto}}" class="img-fluid mt-0 mb-2" width="250" alt="">
+        </div>
+        <div class="">
+            <div class="mx-2">
+                <h5 class="">{{nombreProducto}}</h5>
+                <p class="mb-0">{{descripcion}}</p>
                 <div class="text-right mt-3">
-                    <span class="mr-3">Precio: L. 130.00</span>
+                    <span class="mr-3">Precio: L. {{precio}}.00</span>
                 </div>
                 
             </div>
