--- a/src/app/components/menu-restaurante/menu-restaurante.component.css
+++ b/src/app/components/menu-restaurante/menu-restaurante.component.css
@@ -1,3 +1,9 @@
 #añadir-producto{
     font-size: 1.2rem;
 }
+
+p{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
