Modificacion del frontend y solucion de errores

--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -1,6 +1,6 @@
 <app-footbar></app-footbar>
 
-<main class="container my-3">
+<main class="container my-3" style="min-height: 100vh;">
     <div class="card my-2">
         <div class="row no-gutters">
             <div class="col-5 align-self-center">
@@ -8,11 +8,8 @@
             </div>
             <div class="col-7">
                 <h5 class="mt-2">Combo Coronel Burger</h5>
-                <p class="mb-0">Hamburguesa Coronel Burger, acompañada con Papás Fritas y Pepsi de 900 ml.</p>
-                <div class="text-right mt-3">
-                    <span class="mr-3">Precio: L. 130.00</span>
-                </div>
-                
+                <span class="mr-3">Cantidad: 2</span><br>
+                <span class="mr-3">Precio: L. 130.00</span>
             </div>
         </div>
     </div>
@@ -24,11 +21,8 @@
             </div>
             <div class="col-7">
                 <h5 class="mt-2">Combo Coronel Burger</h5>
-                <p class="mb-0">Hamburguesa Coronel Burger, acompañada con Papás Fritas y Pepsi de 900 ml.</p>
-                <div class="text-right mt-3">
-                    <span class="mr-3">Precio: L. 130.00</span>
-                </div>
-                
+                <span class="mr-3">Cantidad: 2</span><br>
+                <span class="mr-3">Precio: L. 130.00</span>
             </div>
         </div>
     </div>
