--- a/src/app/components/pedidos/pedidos.component.html
+++ b/src/app/components/pedidos/pedidos.component.html
@@ -1,4 +1,4 @@
-<main class="container">
+<main class="container" style="min-height: 100vh;">
     <div class="card my-2">
         <div class="row no-gutters my-2">
             <div class="col-5 align-self-center">
@@ -8,7 +8,6 @@
                 <h5 class="mt-2">Combo Coronel Burger</h5>
                 <h6>Monto: L. 150.00</h6>
                 <h6>Estado: Entregado</h6>
-                <a routerLink="">Mas información</a>
             </div>
         </div>
     </div>
@@ -21,7 +20,6 @@
                 <h5 class="mt-2">Combo Coronel Burger</h5>
                 <h6>Monto: L. 150.00</h6>
                 <h6>Estado: Cancelado</h6>
-                <a routerLink="">Mas información</a>
             </div>
         </div>
     </div>
@@ -34,7 +32,6 @@
                 <h5 class="mt-2">Combo Coronel Burger</h5>
                 <h6>Monto: L. 150.00</h6>
                 <h6>Estado: Entregado</h6>
-                <a routerLink="">Mas información</a>
             </div>
         </div>
     </div>
