--- a/src/app/components/perfil/perfil.component.css
+++ b/src/app/components/perfil/perfil.component.css
@@ -1,6 +1,7 @@
 .profile-list-item{
     border-bottom: 1px solid rgba(189, 185, 185, 0.616);
     border-top: 1px solid rgba(189, 185, 185, 0.616);
+    font-size: 1.3rem;
 }
 
 .profile-list-item h5,h6{
