--- a/src/app/components/carrito/carrito.component.html
+++ b/src/app/components/carrito/carrito.component.html
@@ -1,34 +1,21 @@
 <app-footbar></app-footbar>
 
 <main class="container my-3" style="min-height: 100vh;">
-    <div class="card my-2">
+    <div class="card my-2" *ngIf="producto !== null">
         <div class="row no-gutters">
             <div class="col-5 align-self-center">
-                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
+                <img src="../../../assets/images/{{producto.imagenProducto}}" class="img-fluid" alt="">
             </div>
             <div class="col-7">
-                <h5 class="mt-2">Combo Coronel Burger</h5>
-                <span class="mr-3">Cantidad: 2</span><br>
-                <span class="mr-3">Precio: L. 130.00</span>
-            </div>
-        </div>
-    </div>
-
-    <div class="card my-2">
-        <div class="row no-gutters">
-            <div class="col-5 align-self-center">
-                <img src="../../../assets/images/restaurantes/KFC-logo.png" class="img-fluid" alt="">
-            </div>
-            <div class="col-7">
-                <h5 class="mt-2">Combo Coronel Burger</h5>
-                <span class="mr-3">Cantidad: 2</span><br>
-                <span class="mr-3">Precio: L. 130.00</span>
+                <h5 class="mt-2">{{producto.nombreProducto}}</h5>
+                <span class="mr-3">Cantidad: {{producto.cantidad}}</span><br>
+                <span class="mr-3">Precio: L. {{producto.precio}}.00</span>
             </div>
         </div>
     </div>
 
     <div class="container text-center my-3">
-        <a routerLink="realizar-pedido" class="btn btn-primary" style="width: 70%;">Proceder a Pagar</a>
+        <a routerLink="realizar-pedido" class="btn btn-primary" [ngClass]="{'disabled': producto === null}" style="width: 70%;">Proceder a Pagar</a>
     </div>
 
         
